--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,20 @@ body {
   #Dear-God-What-Have-You-done {
     color:blue;
   }
+
+  #TablePower{
+    width: 320px;
+    padding: 10px;
+    border: 5px solid gray;
+    margin: 0;
+  }
+
+  #BigRedButton{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    border-radius: 20px;
+    font-size: 50px;
+    background-color: red;
+  }
